--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -11,7 +11,8 @@ body
 	color: $text-color
 	height: 100%
 	background-color: $bg-color
-	min-width: 1600px
+	// min-width: 1600px
+	min-width: 320px
 	overflow-x: hidden
 
 h1, h2, h3, h4, h5, h6
