--- a/src/sass/partials/_header.sass
+++ b/src/sass/partials/_header.sass
@@ -254,7 +254,7 @@ $btn-menu-lines-color: $text-color !default
 			transform: translate(-50%, 0)
 			transition-property: transform, opacity, visibility
 			transition-duration: $animation-speed
-			background: url(../../img/logo-title.png) no-repeat center center
+			background: url(../../img/logo-title-white.png) no-repeat center center
 			background-size: auto 45px
 
 		.logo-text
