--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -48,9 +48,12 @@
 ///*COMPONENTS*/
 ///*======================================================*/
 
+@import components/social
+@import components/share-box
 @import components/breadcrumbs
 @import components/files
 @import components/sliders
+@import components/accordion-simple
 @import components/user-form
 @import components/bitrix-search
 @import components/feature-list
@@ -58,6 +61,7 @@
 @import components/top-panel
 @import components/news-grid
 @import components/providers
+@import components/article
 
 ///*======================================================*/
 ///*PARTIALS 2*/
