--- a/src/sass/partials/_layout.sass
+++ b/src/sass/partials/_layout.sass
@@ -121,7 +121,7 @@
 // выравнивание текстовых элементов на странице статьи (контент обернут в .layout-article)
 // и их максимальная ширина
 .layout-article
-	padding: round($text-layout-space-horizontal) #{$text-layout-space-horizontal}
+	padding: round($text-layout-space-horizontal*1.5) #{$text-layout-space-horizontal}
 
 	p, ul, ol, h1, h2, h3, h4, h5, h6, hr, .layout-text, .layout-flood
 		max-width: $text-layout-width
