--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -140,8 +140,7 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 			height: 100%
 
 .entry-img__title
-	position: absolute
-	+centering-transform()
+	+centering-transform-abs()
 	z-index: 10
 	font-size: $font-size-h1
 	color: white
@@ -208,15 +207,15 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 	column-count: 2
 	column-gap: 2em
 	margin-bottom: $bottom-space
-	font-size: 0.9em
+	//font-size: 0.9em
 
 .columnize--3
 	column-count: 3
-	font-size: 0.85em
+	//font-size: 0.85em
 
 .columnize--4
 	column-count: 4
-	font-size: 0.8em
+	//font-size: 0.8em
 
 /*columnize end*/
 
@@ -234,18 +233,17 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 		list-style: none
 
 	ul li, ol li
-		padding-left: 30px
+		padding-left: 50px
 		margin: round($bottom-space*0.5) 0
 		position: relative
 
 	ul > li::before
 		+pseudo()
 		left: 0
-		top: 9px
-		+size(0)
-		border: solid transparent
-		border-width: 5px 0 5px 9px
-		border-left-color: $text-color-alt
+		top: 14px
+		+size(30px, 0)
+		border: solid $outline-color
+		border-width: 3px 0 0
 		box-sizing: border-box
 
 	ol
@@ -257,16 +255,17 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 			overflow: hidden
 
 			&::before
-				position: relative
-				display: inline-block
-				text-align: left
-				+font-alt-bold
-				color: $text-color-alt
 				content: counter(section)
-				padding: 0 4px 0 0
-				min-width: 30px
-				margin-left: -30px
-				box-sizing: border-box
+				position: relative
+				+display-inline-block-top
+				+size(26px)
+				margin: 2px 24px -2px -50px
+				+font-normal
+				+font(13px, 24px)
+				color: $text-color
+				text-align: center
+				border: 1px solid $outline-color
+				border-radius: 50%
 
 	ul ul, ul ol, ol ul
 		margin: round($bottom-space*0.5) 0
@@ -290,7 +289,7 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 	overflow: auto
 	max-width: 100%
 	-webkit-overflow-scrolling: touch
-	margin-bottom: $bottom-space
+	margin-bottom: $bottom-space-md
 
 	table
 		margin-bottom: 0
@@ -302,14 +301,14 @@ table
 	width: auto
 
 	td, th
-		+font(1.4rem, 1.3)
+		+font($font-size--sm, $line-height--sm)
 		color: $table-text-color
-		padding: 8px 10px
-		border-color: black
+		padding: 8px 14px
+		border-color: $table-border-color
 
 .#{$user-content}
 	table
-		margin-bottom: $bottom-space
+		margin-bottom: $bottom-space-md
 
 	.table-auto table
 		margin-bottom: 0
@@ -320,35 +319,17 @@ table
 		td, th
 			color: $table-text-color
 			background-color: $table-bg-color
-			border: 0 solid $table-border-color
-			+font(1.4rem, 1.5)
-
-			&:first-child, &:first-child
-				border-left-width: 1px
-
-			&:last-child, &:last-child
-				border-right-width: 1px
-
-		td
-			border-top-width: 1px
-
-		tbody tr:first-child td
-			border-top-width: 0
-
-		tbody tr:nth-child(even) td
-			background: $table-bg-alt-color
-			color: $table-text-alt-color
+			border-style: solid
+			border-width: 1px 0 0
 
 		th, thead td
 			+font-bold
-			font-size: 1.6rem
 			text-align: left
 
 		th, thead td, tfoot td
 			background: $table-bg-alt-color
 			color: $table-text-alt-color
-			border-color: $table-bg-alt-color
-			border-top-width: 0
+			//border-top-width: 0
 
 /*table end*/
 
@@ -357,41 +338,30 @@ table
 
 	blockquote
 		display: block
-		margin: 0 0 $bottom-space
-		padding: 0
-		background-color: white
+		margin: $bottom-space-lg 0
+		padding: 40px 0
+		border: solid $outline-color
+		border-width: 2px 0
 
 		q
 			display: block
-			margin: 0
-			padding: 0 0 10px
+			max-width: 720px
+			margin: 0 auto 20px
 			font-family: $font-alt
-			+font(round-float($font-size*1.25, 1), $line-height)
-			color: $text-color
+			+font(round-float(24px, 1), 36px)
+			color: $text-color-alt
 			text-align: center
 
 			&::before, &::after
-				+pseudo($pos: relative)
-				+font(4rem, 1)
-				text-align: left
-
-			&::before
-				content: '«'
-				padding-left: 17%
-				padding-bottom: 10px
-
-			&::after
-				content: '»'
-				text-align: right
-				padding-right: 18.5%
-				padding-top: 8px
+				content: none
 
 		cite
-			text-align: right
 			display: block
 			margin-left: auto
+			+font-normal
 			+font($font-size, $line-height)
 			color: $text-color-light
+			text-align: center
 
 /*blockquote end*/
 
@@ -400,6 +370,7 @@ table
 	display: block
 	font-style: normal
 	margin-bottom: $bottom-space
+	color: $text-color-light
 
 /*datetime end*/
 
