--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -22,7 +22,7 @@
 		opacity: 0
 
 //btn-default
-[class*="btn-default"]
+.btn-default, .btn-default-alt
 	position: relative
 	+font-alt-bold
 	+font(1.6rem, 24px)
@@ -31,7 +31,7 @@
 	border: 1px solid transparent
 	background: $btn-bg-color
 	box-shadow: none
-	transition-property: background-color, color
+	transition-property: background-color, color, border-color
 	transition-duration: $animation-speed
 	margin: 0
 
@@ -43,13 +43,13 @@
 
 //btn-default-alt
 .btn-default-alt
-	color: $btn-bg-color
-	border: 2px solid $btn-bg-color
-	background: $btn-text-color
+	color: $btn-text-color
+	border: 1px solid $btn-text-color
+	background: none
 
 	.no-touchevents &:hover
-		background: $btn-bg-hover-color
-		color: $btn-text-color
+		background: $btn-bg-color
+		border-color: $btn-bg-color
 
 // btn-more
 .btn-main
