--- a/src/sass/components/_scroll-nav.sass
+++ b/src/sass/components/_scroll-nav.sass
@@ -47,8 +47,7 @@
 				transform: translate(0, 100%)
 
 			svg
-				position: absolute
-				+centering-transform()
+				+centering-transform-abs()
 				+size(22px)
 
 			path
