--- a/src/sass/partials/_sidebar.sass
+++ b/src/sass/partials/_sidebar.sass
@@ -10,46 +10,91 @@ $sidemenu-bg-color-hover: #999
 	right: 0
 	top: 0
 	height: 100%
-	overflow-x: hidden
-	overflow-y: auto
 	width: $sidebar-width
+	background-color: $base-color
 
-	.home-page &
+	.side-menu--alt &
 		width: $sidebar-width--lg
+		overflow-x: hidden
+		overflow-y: auto
 
 .side-menu__holder
-	display: table
-	min-height: 100vh
+	position: relative
 	width: 100%
-	table-layout: fixed
+	top: 50%
+	transform: translate(0, -50%)
+
+	.side-menu--alt &
+		display: table
+		table-layout: fixed
+		min-height: 100vh
+		top: auto
+		transform: none
 
 .side-menu__row
-	display: table-row
+	display: block
+	margin-top: -1px
+	border: solid $sidemenu-bg-color-hover
+	border-width: 1px 0
+	position: relative
+
+	&::before
+		content: ""
+		display: block
+		padding-top: calc(100%)
 
 	//&:last-child
 		.side-menu__cell
 			background-color: white
 			border-top-color: transparent
 
-.side-menu__cell
-	display: table-cell
-	vertical-align: middle
-	position: relative
-	padding: 5% 13%
-	text-align: center
-	color: $text-color
-	text-decoration: none
-	border-top: 1px solid $sidemenu-bg-color-hover
-	background-color: $base-color
+	.side-menu--alt &
+		display: table-row
+		margin: 0
+		border: none
 
-.side-menu__hover
-	transition-property: background-color
-	transition-duration: $animation-speed
+		&::before
+			content: none
+			//padding-top: calc(100% + 1px)
+
+.side-menu__cell
+	position: absolute
+	+position(0, 100%)
+	+size(auto, 100%)
+	color: $text-color
+	+clear-spacing
+	white-space: nowrap
+	text-decoration: none
+	text-align: center
+	background-color: $base-color
+	transform: translate(-#{$sidebar-width}, 0)
 
 	.no-touchevents &:hover
+		transform: translate(-100%, 0)
+
+	.side-menu--alt &
+		display: table-cell
+		vertical-align: middle
+		position: relative
+		white-space: normal
+		+position(auto, auto)
+		+size(auto)
+		padding: 5% 13%
+		border: solid $sidemenu-bg-color-hover
+		border-width: 1px 0 0
+		transform: none
+
+	.no-touchevents .side-menu--alt &:hover
+		transform: none
+
+.side-menu__hover
+	transition-property: background-color, transform
+	transition-duration: $animation-speed
+
+	.no-touchevents .side-menu--alt &:hover
 		background-color: $sidemenu-bg-color-hover
 
-	&::before
+	.side-menu--alt &::before
 		+pseudo()
 		bottom: 30px
 		left: 50%
@@ -63,35 +108,42 @@ $sidemenu-bg-color-hover: #999
 		transition-duration: $animation-speed
 		z-index: 5
 
-	.no-touchevents &:hover::before
+	.no-touchevents .side-menu--alt &:hover::before
 		opacity: 1
 		visibility: visible
 		transform: translate(-50%, 0)
 
 .side-menu__figure
+	+display-inline-block-middle
+	+size(#{$sidebar-width}, 100%)
 	position: relative
-	max-width: 120px
-	+push-auto
-	margin-bottom: 20px
 	z-index: 5
+
+	.side-menu--alt &
+		display: block
+		+push-auto
+		max-width: 120px
+		margin-bottom: 20px
 
 	&::before
 		+pseudo-inline-block-relative()
 		+ratio(1, 1)
 
 	svg
-		+position(absolute, 50%, null, null, 50%)
-		+size(100px)
-		transform: translate(-50%, -50%)
+		+centering-transform-abs()
+		+size(50px)
 		transition-property: opacity, transform
 		transition-duration: $animation-speed
 
-		.no-touchevents .side-menu__cell:hover &
+		.side-menu--alt &
+			+size(100px)
+
+		.no-touchevents .side-menu--alt .side-menu__cell:hover &
 			//transform: translate(-50%, -70%) scale(0.95)
 			opacity: 0.3
 
 	path
-		fill: #333
+		fill: black
 
 	//img
 		position: absolute
@@ -107,16 +159,28 @@ $sidemenu-bg-color-hover: #999
 			opacity: 0.3
 
 .side-menu__title
-	display: block
+	+display-inline-block-middle
 	position: relative
+	max-height: 100%
+	padding: 0 20px 0 0
 	+font-bold
 	+font(1.6rem, 1.167)
+	letter-spacing: normal
 	text-transform: uppercase
-	transition-property: color, transform
+	opacity: 0
+	transition-property: color, transform, opacity
 	transition-duration: $animation-speed
 	z-index: 5
 
+	.side-menu--alt
+		display: block
+		opacity: 1
+
 	.no-touchevents .side-menu__cell:hover &
+		transition-delay: #{$animation-speed*0.5}
+		opacity: 1
+
+	.no-touchevents .side-menu--alt .side-menu__cell:hover &
 		color: white
 
 .download
@@ -141,7 +205,7 @@ $sidemenu-bg-color-hover: #999
 
 	&::before
 		+pseudo(attr(data-label))
-		+position($pos: null, $t: 0, $l: 0)
+		+position(0, 0)
 		+size(100%)
 		color: white
 		background-color: $sidemenu-bg-color-hover
