--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -94,6 +94,16 @@ $form-border-focus-color: darken($form-border-color, 20%) !default
 $form-error-color: red !default
 $form-success-color: green !default
 $form-bottom-space: 3rem !default
+// ==================
+$form-font-size: 16px
+$form-line-height: 24px
+// ==================
+$input-space-v: 12px
+$input-space-h: 18px
+$select-space-v: 12px
+$select-space-h: $input-space-h
+$select-arrow-width: 40px
+$select-arrow-height: 100%
 
 // btn
 $btn-bg-color: #fabb00 !default
