--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -28,6 +28,7 @@
 @import base/typography
 @import components/buttons
 @import partials/forms-default
+@import partials/forms-light
 
 /*======================================================*/
 /*LAYOUT*/
