--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -86,22 +86,25 @@ $flood-layout-space-horizontal: $text-layout-space-horizontal !default
 $flood-layout-width: 1400px !default
 
 // form
-$form-text-color: $text-color-light !default
-$form-placeholder-color: lightgray !default
+$form-text-color: $text-color !default
+$form-placeholder-color: $text-color-light !default
 $form-bg-color: white !default
-$form-border-color: lightgray !default
-$form-border-focus-color: darken($form-border-color, 20%) !default
+$form-border-color: black !default
+$form-border-focus-color: $base-color !default
 $form-error-color: red !default
 $form-success-color: green !default
-$form-bottom-space: 3rem !default
+$form-bottom-space: 1.5em !default
+$form-bottom-space--sm: 1.5em !default
+$form-gap: 60px !default
 // ==================
-$form-font-size: 16px
+$form-font-size: 18px
 $form-line-height: 24px
+$form-input-height: 50px
 // ==================
-$input-space-v: 12px
-$input-space-h: 18px
+$form-input-space-v: 12px
+$form-input-space-h: 18px
 $select-space-v: 12px
-$select-space-h: $input-space-h
+$select-space-h: $form-input-space-h
 $select-arrow-width: 40px
 $select-arrow-height: 100%
 
