--- a/src/sass/components/_user-form.sass
+++ b/src/sass/components/_user-form.sass
@@ -6,16 +6,14 @@
 .form-title
 	display: block
 	+font-alt-bold
-	padding-bottom: $bottom-space
-	color: $text-color-alt
-	font-size: 2.4rem
-	line-height: 1.2
+	+font($font-size-h2, $line-height-h2)
+	color: $title-color
 	text-align: center
+	margin-bottom: $bottom-space-md
 
 .user-form
-	background: #fafafa
+	background: $bg-color-alt
 	padding: $text-layout-space-horizontal
-	border: 1px solid $border-color
 	margin-bottom: $bottom-space
 
 	+media('<tab-lg')
@@ -28,9 +26,12 @@
 	form
 		display: block
 
+	.input-wrap
+		margin-bottom: 50px
+
 	textarea
-		height: 152px
-		max-height: 152px
+		height: 130px
+		max-height: 130px
 		resize: none
 
 	.captcha
@@ -67,22 +68,17 @@
 			padding-top: $bottom-space-sm
 
 	.form-buttons
-		float: left
-		margin-right: 30px
-
-		+media('<mob-lg')
-			float: none
-			margin: 0
+		text-align: center
 
 		.btn-submit
-			width: 200px
+			min-width: 216px
 
 	.form-note
 		overflow: hidden
 		min-height: 50px
-		font-size: 0
-		letter-spacing: -4px
+		+clear-spacing
 		line-height: 25px
+		text-align: center
 
 		&::before
 			content: ''
@@ -94,8 +90,7 @@
 		display: inline-block
 		vertical-align: middle
 		width: calc(100% - 6px)
-		font-size: 1.4rem
-		line-height: 1.5
+		+font($font-size--less, $line-height--less)
 		letter-spacing: normal
 
 /*user form end*/
