--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -55,6 +55,7 @@
 @import components/files
 @import components/sliders
 @import components/accordion-simple
+@import components/j-filer
 @import components/user-form
 @import components/bitrix-search
 @import components/feature-list
