--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -11,6 +11,9 @@ $line-height: round-float(3.2rem/$font-size, 2) !default
 // ===============
 $font-size--sm: 1.6rem !default
 $line-height--sm: round-float(2.4rem/$font-size--sm, 2) !default
+// ===============
+$font-size--less: 1.4rem !default
+$line-height--less: round-float(2.0rem/$font-size--less, 2) !default
 
 // ===============
 $font-size-h1: 4.8rem !default
@@ -46,6 +49,7 @@ $bottom-space-lg: round-float($font-size*$line-height*2, 1) !default
 $base-color: #fabb00 !default
 // цвет фона страницы
 $bg-color: white !default
+$bg-color-alt: #f3f3f3 !default
 $bg-color-light: #f3f3f3 !default
 // цвет основного текста
 $text-color: black !default
@@ -100,6 +104,8 @@ $form-gap: 60px !default
 $form-font-size: 18px
 $form-line-height: 24px
 $form-input-height: 50px
+// ==================
+$checkbox-color: $base-color
 // ==================
 $form-input-space-v: 12px
 $form-input-space-h: 18px
