--- a/src/sass/partials/_forms-default.sass
+++ b/src/sass/partials/_forms-default.sass
@@ -5,11 +5,13 @@
 /*FORM STYLES DEFAULT
 /*form layout
 .form-row, .input-wrap
-	position: relative
+	position: relative // Важно! Для позицирования отметки подтверждения полей формы
 	margin-bottom: $form-bottom-space
+	z-index: 1 // Важно! Отметка подтверждения полей формы имеет z-index: -1
 
 .input-holder
-	position: relative
+	position: relative // Важно! Для позицирования отметки подтверждения полей формы
+	z-index: 1 // Важно! Отметка подтверждения полей формы имеет z-index: -1
 
 .form-row
 	margin: 0 -#{round($form-gap*0.5)}
@@ -98,6 +100,7 @@ textarea
 	position: absolute
 	+size(100%, 22px)
 	+font(12px, 22px)
+	letter-spacing: normal // Важно!
 	+truncate(none)
 	color: $form-error-color
 	display: none
@@ -107,6 +110,7 @@ textarea
 
 .confirm-note
 
+	$this-icon-size: 16px
 	$this-icon-lines-width: 12px
 	$this-icon-lines-height: 2px
 	$this-icon-lines-color: $base-color
@@ -115,12 +119,18 @@ textarea
 	left: 100%
 	top: round($form-input-height*0.5)
 	+font(0, 0)
-	+size(16px)
-	margin: -8px 0 0 10px
+	+size($this-icon-size)
+	margin: -8px 0 0 #{round(($text-layout-space-horizontal - $this-icon-size)*0.5)}
 	backface-visibility: hidden
 	z-index: -1
 	pointer-events: none
 	display: none
+
+	+media('<tab-lg')
+		margin-left: #{round(($text-layout-space-horizontal--md - $this-icon-size)*0.5)}
+
+	+media('<tab-sm')
+		margin-left: #{round(($text-layout-space-horizontal--sm - $this-icon-size)*0.5)}
 
 	form .success ~ &
 		display: block
@@ -615,7 +625,8 @@ input[type="radio"]
 				right: 0
 				top: 0
 				+size($select-arrow-width, $select-arrow-height)
-				background-color: white
+				//background-color: white
+				background-color: transparent
 				z-index: 2
 
 				b
