--- a/src/sass/partials/_forms-light.sass
+++ b/src/sass/partials/_forms-light.sass
@@ -71,8 +71,8 @@
 
 		&:before, &:after, & label
 			transition-property: color, transform, width
-			transition-duration: $animation-speed
-			transition-timing-function: cubic-bezier(0, 0.25, 0.5, 1)
+			transition-duration: 0.3s
+			transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
 
 	&.input--focus, &.input--has-value
 		input[type="text"], input[type="password"], input[type="email"], input[type="search"], textarea
