--- a/src/sass/partials/_forms-default.sass
+++ b/src/sass/partials/_forms-default.sass
@@ -646,6 +646,7 @@ input[type="radio"]
 		background-color: $title-color
 		margin-top: -1px
 		z-index: 1
+		backface-visibility: hidden
 
 	&::before,
 	.select2-container--default .select2-selection--single .select2-selection__arrow b::before
