--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -64,6 +64,9 @@
 @import components/news-grid
 @import components/providers
 @import components/article
+@import components/catalog-list
+@import components/catalog-menu
+@import components/view-switcher
 
 ///*======================================================*/
 ///*PARTIALS 2*/
