--- a/src/sass/utils/_mixins.sass
+++ b/src/sass/utils/_mixins.sass
@@ -549,11 +549,17 @@
 ///   width: 100%;
 ///   height: 100%;
 /// }
-=cover($position: absolute)
+=cover($position: null)
 	@if $position
 		position: $position
 	+position(0, 0)
 	+size(100%)
+
+=cover-abs()
+	+cover($position: absolute)
+
+=cover-rel()
+	+cover($position: relative)
 
 /// Примесь позволяет указывает изображению способ заполнения блока,
 /// в котором находится
