--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -47,6 +47,8 @@ $bottom-space-lg: round-float($font-size*$line-height*2, 1) !default
 
 // основной цвет сайте
 $base-color: #fabb00 !default
+$base-color--ea: #f68b21 !default
+$base-color-alt--ea: #006ab6 !default
 // цвет фона страницы
 $bg-color: white !default
 $bg-color-alt: #f3f3f3 !default
@@ -180,6 +182,16 @@ $odnoklassniki-color: #f2822e
 $youtube-color: #e62117
 $instagram-color-start: #de4f5a
 $instagram-color-end: #a43b97
+
+// catalog menu
+$catalog-menu-text-color: rgba(255, 255, 255, 0.50) !default
+$catalog-menu-bg-color: #5e7180 !default
+$catalog-menu-bg-color-s: shade($catalog-menu-bg-color, 80%) !default
+$catalog-menu-bg-color-ss: shade($catalog-menu-bg-color, 62%) !default
+$catalog-menu-bg-color-sss: shade($catalog-menu-bg-color, 48%) !default
+$catalog-menu-bg-color-ssss: shade($catalog-menu-bg-color, 38%) !default
+$catalog-menu-border-color: rgba(0, 0, 0, 0.20) !default
+$catalog-menu-tab-height: 70px !default
 
 // ============= обнуление жирности и наклонности шрифта ==============
 // ============= использовать, если подключается font-face ==============
