--- a/src/sass/components/_top-panel.sass
+++ b/src/sass/components/_top-panel.sass
@@ -33,6 +33,9 @@
 		width: calc(100% - #{$sidebar-width--lg + $header-width})
 		max-width: calc(#{$page-layout-width - $sidebar-width--lg - $header-width})
 
+	.ea-catalog-page &
+		width: calc(100% - #{$catalog-menu-width + $header-width})
+		max-width: calc(#{$page-layout-width - $catalog-menu-width - $header-width})
 
 .top-panel-contacts
 	float: right
