--- a/src/sass/partials/_layout.sass
+++ b/src/sass/partials/_layout.sass
@@ -33,6 +33,9 @@
 	.home-page &
 		margin-right: $sidebar-width--lg
 
+	.ea-catalog-page &
+		margin-right: $catalog-menu-width
+
 //+media('<desk-lg')
 	margin-right: 0
 
