--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -346,6 +346,10 @@ table
 			border-style: solid
 			border-width: 1px 0 0
 
+		tr:last-child
+			td
+				border-width: 1px 0
+
 		th, thead td
 			+font-bold
 			text-align: left
