--- a/src/sass/components/_catalog-menu.sass
+++ b/src/sass/components/_catalog-menu.sass
@@ -2,12 +2,18 @@
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
 
-/*MENU REGION
-/*region menu button
-$btn-catalog-menu-size: 22px
-$btn-catalog-menu-margin-right: 20px
+/* CATALOG MENU
+/* catalog menu list
+.catalog-menu
+	position: fixed
+	right: 0
+	top: 0
+	height: 100%
+	padding-right: $catalog-categories-width--full
+	width: $catalog-menu-width
+	z-index: 998
 
-/*region menu
+/* catalog menu list
 // общие стили для главного списка навигации
 .catalog-menu__list
 	position: relative
@@ -104,6 +110,9 @@ $btn-catalog-menu-margin-right: 20px
 		background-color: shade($catalog-menu-bg-color, 90%)
 		border-color: shade($catalog-menu-border-color, 90%)
 
+	& > .catalog-menu__drop
+		display: block
+
 // СТРЕЛКИ навигации
 .catalog-menu__angle
 	position: absolute
@@ -199,4 +208,108 @@ $btn-catalog-menu-margin-right: 20px
 				ul, a, .catalog-menu__angle
 					background-color: $catalog-menu-bg-color-ssss
 
-/*MENU REGION end
+/* catalog menu list
+
+/* catalog categories
+.catalog-categories
+	position: fixed
+	right: 0
+	top: 0
+	height: 100%
+	width: $catalog-categories-width--full
+	background-color: $base-color--ea
+	z-index: 998
+
+.catalog-categories__holder
+	position: relative
+	width: $catalog-categories-width--full
+	top: 50%
+	transform: translate(0, -50%)
+	max-height: 100%
+	overflow-x: hidden
+	overflow-y: auto
+
+.catalog-categories__row
+	display: block
+	//position: absolute
+	//+position(0, 100%)
+	//+size(auto, 100%)
+	//color: $text-color
+	//+clear-spacing
+	//white-space: nowrap
+	//text-decoration: none
+	//text-align: center
+	//background-color: $base-color
+	//transform: translate(-#{$sidebar-width}, 0)
+
+	//.no-touchevents &:hover
+		transform: translate(-100%, 0)
+
+.catalog-categories__item
+	display: block
+	margin-top: -1px
+	border: solid $sidemenu-bg-color-hover
+	border-width: 1px 0
+	position: relative
+
+.catalog-categories__cell
+	display: block
+	color: $text-color
+	+clear-spacing
+	white-space: nowrap
+	text-decoration: none
+	text-align: center
+	background-color: $base-color--ea
+	transition-property: background-color, transform
+	transition-duration: $animation-speed
+
+	//.no-touchevents &:hover
+		background-color: black
+
+.catalog-categories--hover
+	transition-property: background-color, transform
+	transition-duration: $animation-speed
+
+.catalog-categories__figure
+	+display-inline-block-middle
+	+size(#{$sidebar-width}, 100%)
+	position: relative
+	z-index: 5
+
+	&::before
+		+pseudo-inline-block-relative()
+		+ratio(1, 1)
+
+	svg
+		+centering-transform-abs()
+		+size(50px)
+		transition-property: opacity, transform
+		transition-duration: $animation-speed
+
+		&:first-child
+			display: none
+
+	path
+		fill: black
+
+.catalog-categories__title
+	+display-inline-block-middle
+	position: relative
+	max-height: 100%
+	padding-right: 20px
+	+font-bold
+	+font(1.6rem, 1.167)
+	letter-spacing: normal
+	text-transform: uppercase
+	text-align: left
+	opacity: 1
+	transition-property: color, transform, opacity
+	transition-duration: round-float($animation-speed*1.5, 1)
+	z-index: 5
+
+	//.no-touchevents .catalog-categories__cell:hover &
+		transition-delay: #{$animation-speed*1.5}
+		opacity: 1
+
+/* catalog categories end
+/* CATALOG MENU end
