--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -128,6 +128,58 @@ $table-bg-color: white !default
 $table-text-alt-color: $text-color !default
 $table-bg-alt-color: #f3f3f3 !default
 
+// grids
+$grid-space: 40px !default // отступы между элементами сетки, например, новостей
+$grid-inside-horizontal-space: round($grid-space*0.875) !default // горизонтальные отступы внутри элементов сетки
+$grid-inside-vertical-space: round($grid-inside-horizontal-space*0.875) !default // вертикальные отступы внутри элементов сетки
+
+// header
+$header-width: 80px !default
+
+// logo
+$logo-bg-color: #333 !default
+
+// navigation
+$nav-width: 380px !default
+
+// sidebar
+$sidebar-width: 80px !default
+$sidebar-width--lg: 320px !default
+$sidemenu-bg-color-hover: #999
+
+// catalog menu
+$catalog-menu-width: 604px !default
+$catalog-menu-width--md: 400px !default
+// ================
+$catalog-menu-text-color: white !default
+$catalog-menu-bg-color: #333 !default
+$catalog-menu-bg-color-s: shade($catalog-menu-bg-color, 80%) !default
+$catalog-menu-bg-color-ss: shade($catalog-menu-bg-color, 62%) !default
+$catalog-menu-bg-color-sss: shade($catalog-menu-bg-color, 48%) !default
+$catalog-menu-bg-color-ssss: shade($catalog-menu-bg-color, 38%) !default
+$catalog-menu-border-color: rgba(0, 0, 0, 0.20) !default
+$catalog-menu-tab-height: 70px !default
+// =================
+$catalog-categories-width--full: 284px !default
+$catalog-categories-width--short: 80px !default
+
+// top panel
+$top-panel-height: 80px !default
+$top-panel-space: 20px !default
+
+// news grid
+$news-grid-font-size: $font-size
+$news-grid-line-height: $line-height
+
+// social color
+$facebook-color: #3a589e
+$vkontakte-color: #4b73a4
+$twitter-color: #1da0f2
+$odnoklassniki-color: #f2822e
+$youtube-color: #e62117
+$instagram-color-start: #de4f5a
+$instagram-color-end: #a43b97
+
 // animation
 $animation-speed: 0.2s !default
 $animation-speed-mouseleave: 0.35s !default
@@ -147,51 +199,6 @@ $font-alt: 'proximanova-regular', sans-serif !default
 $font-alt-bold: 'proximanova-bold', sans-serif !default
 $font-alt-italic: 'proximanova-regular', sans-serif !default
 $font-alt-bold-italic: 'proximanova-regular', sans-serif !default
-
-// grids
-$grid-space: 40px !default // отступы между элементами сетки, например, новостей
-$grid-inside-horizontal-space: round($grid-space*0.875) !default // горизонтальные отступы внутри элементов сетки
-$grid-inside-vertical-space: round($grid-inside-horizontal-space*0.875) !default // вертикальные отступы внутри элементов сетки
-
-// header
-$header-width: 80px !default
-
-// logo
-$logo-bg-color: #333 !default
-
-// navigation
-$nav-width: 380px !default
-
-// sidebar
-$sidebar-width: 80px !default
-$sidebar-width--lg: 320px !default
-
-// top panel
-$top-panel-height: 80px !default
-$top-panel-space: 20px !default
-
-// news grid
-$news-grid-font-size: $font-size
-$news-grid-line-height: $line-height
-
-// social color
-$facebook-color: #3a589e
-$vkontakte-color: #4b73a4
-$twitter-color: #1da0f2
-$odnoklassniki-color: #f2822e
-$youtube-color: #e62117
-$instagram-color-start: #de4f5a
-$instagram-color-end: #a43b97
-
-// catalog menu
-$catalog-menu-text-color: rgba(255, 255, 255, 0.50) !default
-$catalog-menu-bg-color: #5e7180 !default
-$catalog-menu-bg-color-s: shade($catalog-menu-bg-color, 80%) !default
-$catalog-menu-bg-color-ss: shade($catalog-menu-bg-color, 62%) !default
-$catalog-menu-bg-color-sss: shade($catalog-menu-bg-color, 48%) !default
-$catalog-menu-bg-color-ssss: shade($catalog-menu-bg-color, 38%) !default
-$catalog-menu-border-color: rgba(0, 0, 0, 0.20) !default
-$catalog-menu-tab-height: 70px !default
 
 // ============= обнуление жирности и наклонности шрифта ==============
 // ============= использовать, если подключается font-face ==============
